Feat: 그룹 total 추가 및 반환값 수정 #61